<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    tools:context="com.lcbo.view.dialog.StoreSearchDialogFragment">

    <Button
        android:id="@+id/store_search_dialog_find_btn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@+id/store_search_dialog_contant_layout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:text="@string/ok"
        android:layout_marginBottom="16dp"
        android:textColor="@color/buttonTextColor" />

    <GridLayout
        android:id="@+id/store_search_dialog_contant_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:columnCount="2"
        android:padding="16dp">

        <CheckBox
            android:id="@+id/store_search_dialog_filter_has_parking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="8dp"
            android:layout_row="0"
            android:button="@drawable/check_mark" />

        <CheckBox
            android:id="@+id/store_search_dialog_filter_public_transit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="8dp"
            android:layout_row="1"
            android:button="@drawable/check_mark" />

        <CheckBox
            android:id="@+id/store_search_dialog_filter_wheels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="8dp"
            android:layout_row="2"
            android:button="@drawable/check_mark" />

        <CheckBox
            android:id="@+id/store_search_dialog_filter_vintage_corner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="8dp"
            android:layout_row="3"
            android:button="@drawable/check_mark" />

        <CheckBox
            android:id="@+id/store_search_dialog_filter_consultant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="8dp"
            android:layout_row="4"
            android:button="@drawable/check_mark" />

        <CheckBox
            android:id="@+id/store_search_dialog_filter_tasting_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="8dp"
            android:layout_row="5"
            android:button="@drawable/check_mark" />

        <CheckBox
            android:id="@+id/store_search_dialog_filter_special_occasion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="8dp"
            android:layout_row="6"
            android:button="@drawable/check_mark" />

        <CheckBox
            android:id="@+id/store_search_dialog_filter_cold_beer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="8dp"
            android:layout_row="7"
            android:button="@drawable/check_mark" />

        <CheckBox
            android:id="@+id/store_search_dialog_filter_beelingual_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="8dp"
            android:layout_row="8"
            android:button="@drawable/check_mark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_row="0"
            android:text="@string/parking_filter"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_row="1"
            android:text="@string/public_transit_filter"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_row="2"
            android:text="@string/wheelchair_filter"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_row="3"
            android:text="@string/vintages_corner_filter"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_row="4"
            android:text="@string/product_consulting_filter"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_row="5"
            android:text="@string/tasting_bar_filter"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_row="6"
            android:text="@string/special_occasion_filter"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_row="7"
            android:text="@string/cold_beer_room_filter"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_row="8"
            android:text="@string/bilingual_service_filter"
            android:textColor="@color/textColor" />
    </GridLayout>
</RelativeLayout>
